--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -13,3 +13,8 @@
 @import "nav";
 @import "footer";
 @import "home";
+@import "work";
+@import "about";
+@import "blog";
+@import "blog-detail";
+@import "contact";
