--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,9 +1,11 @@
-$white: #fff;
+$white: #FFF;
 $white-bg: rgba(255,255,255, 0.9); 
+$background: #F5F5F5;
 $green: #3DB872;
 $green-bg: rgba(0, 160, 2, 0.4); 
 $beige: #E5C39E;
 $grey: #C3CED0;
+$dark-grey: #4A4A4A;
 $black: #000;
 $sky-blue: #01ABE9;
 $dark-blue: #3B5323;
