--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -17,4 +17,80 @@
 		background: $white-bg;
 		z-index: 1;
 	}
+	#feed{
+		width: 100%;
+		height: 76px;
+		background: $green-bg;
+		position: fixed;
+		bottom: 0;
+		z-index: 2;
+		transition: all 600ms ease-in-out;
+		&:hover, &:focus, &:active{
+			background: $green;
+    		height: 300px;
+    		.title{
+    			height: 0 !important;
+				margin: 0;
+				color: $green;
+				&:first-child{
+    				border-right: 1px solid $green;
+    			}
+    		}
+    	}
+    	@include breakpoint(tablet){
+    		height: 58px;
+    	}
+    	.latest{
+    		width: 50%;
+    		float: left;
+    		padding: 0 20px;
+    		.title{
+    			height: 76px;
+    			line-height: 76px;
+    			border: none;
+    			margin-top: 0;
+    			overflow: hidden;
+    			@include breakpoint(tablet){
+					height: 58px;
+    				line-height: 58px;
+    			}
+    		}
+    		&:first-child .title{
+    			border-right: 1px solid $background;
+    		}
+    		h4{
+    			color: $white;
+    			border-bottom: 1px solid $white;
+    			height: auto;
+    			line-height: 1.4em;
+    			margin-top: 20px;
+    			transition: all 300ms ease-in-out;
+    		}
+    		p{
+    			color: $white;
+    		}
+    		a{
+    			display: block;
+    			width: 120px;
+    			margin: 20px;
+    			height: 40px;
+    			float: right;
+    			padding: 9px;
+    			text-align: center;
+    			text-transform: uppercase;
+    			font-weight: 300;
+    			color: $white;
+    			background: $green;
+    			border: 1px solid $white;
+    			&:hover, &:focus, &:active{
+					background: $white;
+		    		color: $green;
+		    	}
+    		}
+    	}
+	}
+	#feed.close{
+		transition: all 300ms ease-in-out;
+		height: 0;
+	}
 }
