--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,6 +1,7 @@
 $white: #FFF;
 $white-bg: rgba(255,255,255, 0.9); 
 $background: #F5F5F5;
+$background-opaque: rgba(245,245,245, 0.9); 
 $green: #3DB872;
 $green-bg: rgba(0, 160, 2, 0.4); 
 $beige: #E5C39E;
