--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,11 +1,13 @@
 #nav-wrap{
 	width: 100%;
-	height: 0;
+	height: 100%;
+	background: transparent;
 	overflow: hidden;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: -1;
+	transition: all 300ms ease-in-out;
 	nav{
 		width: 180px;
 		margin: 0 auto;
@@ -18,9 +20,9 @@
 			a{
 				display: block;
 				width: 100%;
-				height: 0;
-				margin: 0;
-				color: transparent;
+				height: 60px;
+				margin: 20px 0;
+				color: $green;
 				font-size: 2em;
 				text-align: center;
 				text-transform: uppercase;
@@ -42,13 +44,15 @@
 	}
 }
 #nav-wrap.open{
-	height: 100%;
-	ul li a{
-		height: 60px;
-		color: $green;
-		margin: 20px 0;
-	}
+	z-index: 1;
+	background: $background;
 	.underline{
 		border-bottom: 2px solid $green;
 	}
+}
+.home.about #nav-wrap.open{
+	background: $background-opaque;
+}
+.home #nav-wrap.open{
+	background: transparent;
 }
