--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -6,6 +6,7 @@
 		background-repeat: no-repeat !important;
 		width: 180px;
 		height: 180px;
+		border-radius: 50%;
 		float: left;
 		position: relative;
 		transition: all 300ms ease-in-out;
@@ -15,6 +16,7 @@
 			width: 90%;
 			height: 300px;
 			margin: 20px 5%;
+			border-radius: 0;
 		}
 		@include breakpoint(mobile-landscape){
 			height: 180px;
