--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,12 @@ html{
 h1, h2, h3, h4, h5{
 	color: $green;
 }
+h1{
+	margin-top: 40px;
+	@include breakpoint(mobile-landscape){
+		margin-top: 20px;
+	}
+}
 p, ul li{
 	color: $black;
 }
