--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,6 +4,7 @@ html{
 }
 h1, h2, h3, h4, h5{
 	color: $green;
+	font-family: 'latoregular',Helvetica,Arial,sans-serif;
 }
 h1{
 	margin-top: 40px;
@@ -13,9 +14,11 @@ h1{
 }
 p, ul li{
 	color: $black;
+	font-family: 'quattrocento_romanregular','Times New Roman',Serif;
 }
 a{
 	color: $green-bg;
+	font-family: 'vollkornregular','Times New Roman',Serif;
 	-webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
@@ -33,6 +36,10 @@ h1{
 h4{
 	font-size: 1.3em;
 	text-transform: uppercase;
+}
+
+.button{
+	font-family: 'latoregular',Helvetica,Arial,sans-serif;
 }
 
 .wrapper{
