--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -30,6 +30,8 @@
 			box-shadow: none;
 			background: $green;
 			color: $white;
+			font-size: 1.2em;
+			font-family: 'latoregular',Helvetica,Arial,sans-serif;
 			text-transform: uppercase;
 			text-align: center;
 			width: 120px;
@@ -45,15 +47,19 @@
 		}
 		::-webkit-input-placeholder {
 		   color: $green-bg;
+		   font-family: 'vollkornregular','Times New Roman',Serif;
 		}
 		:-moz-placeholder {
 		   color: $green-bg;  
+		   font-family: 'vollkornregular','Times New Roman',Serif;
 		}
 		::-moz-placeholder {
 		   color: $green-bg; 
+		   font-family: 'vollkornregular','Times New Roman',Serif;
 		}
 		:-ms-input-placeholder {  
 		   color: $green-bg;  
+		   font-family: 'vollkornregular','Times New Roman',Serif;
 		}
 	}
 }
