--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,4 +1,28 @@
 @font-face {
+    font-family: 'latoregular';
+    src: url('../fonts/lato-regular-webfont.eot');
+    src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/lato-regular-webfont.woff2') format('woff2'),
+         url('../fonts/lato-regular-webfont.woff') format('woff'),
+         url('../fonts/lato-regular-webfont.ttf') format('truetype'),
+         url('../fonts/lato-regular-webfont.svg#latoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'quattrocento_romanregular';
+    src: url('../fonts/quattrocento-regular-webfont.eot');
+    src: url('../fonts/quattrocento-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/quattrocento-regular-webfont.woff2') format('woff2'),
+         url('../fonts/quattrocento-regular-webfont.woff') format('woff'),
+         url('../fonts/quattrocento-regular-webfont.ttf') format('truetype'),
+         url('../fonts/quattrocento-regular-webfont.svg#quattrocento_romanregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
 	font-family: 'postroch';
 	src: url('../icons/fonts/postroch.eot');
 }
