--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -5,7 +5,7 @@ $background-opaque: rgba(245,245,245, 0.5);
 $green: #3DB872;
 $green-bg: rgba(0, 160, 2, 0.4); 
 $beige: #E5C39E;
-$grey: #C3CED0;
+$grey: #474747;
 $dark-grey: #4A4A4A;
 $black: #000;
 $sky-blue: #01ABE9;
