--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,49 +1,71 @@
 .about{
 	position: relative;
-	#profile{
-		background-size: cover !important;
-		background-position: bottom center !important;
-		background-repeat: no-repeat !important;
-		width: 180px;
-		height: 180px;
-		border-radius: 50%;
-		float: left;
-		position: relative;
-		transition: all 300ms ease-in-out;
-		margin: 20px;
-		top: 0;
-		@include breakpoint(tablet){
-			width: 90%;
-			height: 300px;
-			margin: 20px 5%;
-			border-radius: 0;
-		}
-		@include breakpoint(mobile-landscape){
-			height: 180px;
-		}
-	}
 	#details{
-		width: 80%;
-		float: left;
 		background: $background;
-		@include breakpoint(tablet){
-			width: 90% !important;
-			margin: 20px 5%;
+		#profile{
+			background-size: cover !important;
+			background-position: bottom center !important;
+			background-repeat: no-repeat !important;
+			width: 180px;
+			height: 180px;
+			border-radius: 50%;
+			float: left;
+			position: relative;
+			transition: all 300ms ease-in-out;
+			margin: 0 20px 0 0;
+			top: 0;
+			@include breakpoint(tablet){
+				width: 100%;
+				height: 300px;
+				margin: 20px 0;
+				border-radius: 0;
+			}
+			@include breakpoint(mobile-landscape){
+				height: 180px;
+				margin: 0 0 20px 0;
+			}
 		}
 		h1,h4{
 			color: $green;
 		}
+		h1{
+			padding-top: 94px;
+			@include breakpoint(mobile-landscape){
+				text-align: center;
+				font-size: 1.4em;
+			}
+			@include breakpoint(mobile){
+				margin-top: 40px;
+			}
+		}
+		h1+p{
+			@include breakpoint(mobile-landscape){
+				text-align: center;
+			}
+			@include breakpoint(mobile){
+				margin-bottom: 60px;
+			}
+		}
+		#text-wrap{
+			width: 100%;
+			float: left;
+			margin: 40px 0;
+			@include breakpoint(mobile-landscape){
+				margin: 20px 0;
+			}
+		}
 		.four{
-			width: 50%;
+			width: 25%;
 			float: left;
 			min-height: 200px;
+			transition: all 300ms ease-in-out;
+			@include breakpoint(tablet){
+				width: 50%;
+			}
 			@include breakpoint(mobile-landscape){
 				width: 100%;
 				min-height: 0;
 			}
-		}
-		ul{
-			padding-left: 20px;
 		}
 	}
 }
