--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,7 @@ html{
 h1, h2, h3, h4, h5{
 	color: $green;
 	font-family: 'latoregular',Helvetica,Arial,sans-serif;
+	transition: all 300ms ease-in-out;
 }
 h1{
 	margin-top: 40px;
@@ -15,10 +16,11 @@ h1{
 p, ul li{
 	color: $black;
 	font-family: 'quattrocento_romanregular','Times New Roman',Serif;
+	transition: all 300ms ease-in-out;
 }
 a{
 	color: $green-bg;
-	font-family: 'vollkornregular','Times New Roman',Serif;
+	font-family: 'quattrocento_romanregular','Times New Roman',Serif;
 	-webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
