--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,48 @@
 footer{
-	
+	width: 100%;
+	height: 100px;
+	padding: 20px;
+	float: left;
+	background: $green;
+	@include breakpoint(max-width,650px){
+		height: 170px;
+	}
+	#spotify{
+		width: 300px;
+		float: left;
+		dl{
+			dt{
+				color: $white;
+				font-family: 'latoregular',Helvetica,Arial,sans-serif;
+			}
+			dd{
+				color: $white;
+				font-family: 'quattrocento_romanregular','Times New Roman',Serif;
+			}
+
+		}
+	}
+	#nav{
+		width: 300px;
+		height: 40px;
+		float: right;
+		@include breakpoint(max-width,650px){
+			float: left;
+		}
+		ul li{
+			list-style-type: none;
+			float: left;
+			width: 100px;
+			a{
+				color: $white;
+				letter-spacing: 0em;
+				&:hover,&:focus,&:active{
+					letter-spacing: 0.1em;
+				}
+			}
+		}
+		.social-icon{
+			width: 50px;
+		}
+	}	
 }
