--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,9 +1,11 @@
 header{
 	width: 100%;
 	height: 94px;
+	background: $background;
 	float: left;
-	position: relative;
-	z-index: 2;
+	position: fixed;
+	box-shadow: 0 2px 4px 0 $background;
+	z-index: 999;
 	#logo{
 		width: 55px;
 		height: 55px;
@@ -37,10 +39,11 @@ header{
 	}
 	a h1{
 		color: $green;
-		font-size: 10px;
+		font-size: 10px !important;
 		font-family: Helvetica,Arial;
-		margin: 55px 0 0;
+		margin: 55px 0 0 !important;
 		display: none;
+		padding: 0 !important;
 	}
 	#contact{
 		width: 160px;
