--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,7 +1,7 @@
 #nav-wrap{
 	width: 100%;
 	height: 100%;
-	background: transparent;
+	background: $background;
 	overflow: hidden;
 	position: fixed;
 	top: 0;
@@ -13,6 +13,7 @@
 		margin: 0 auto;
 		@include breakpoint(mobile-landscape){
 			width: 180px;
+			margin-top: 100px !important;
 		}
 	}
 	ul{
@@ -44,6 +45,7 @@
 				}
 				@include breakpoint(mobile-landscape){
 					width: 180px;
+					height: 40px;
 					font-size: 1.6em;
 				}
 			}
@@ -51,6 +53,6 @@
 	}
 }
 #nav-wrap.open{
-	z-index: 1;
+	z-index: 10;
 	background: $background;
 }
