--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -2,13 +2,25 @@
 	.twelve{
 		background: $background;
 		h1{
+			padding-top: 94px;
 			color: $green;
+			@include breakpoint(mobile-landscape){
+				text-align: center;
+				font-size: 1.4em;
+			}
+			@include breakpoint(mobile){
+				margin-top: 40px;
+			}
 		}
-		p{
+		h1+p{
 			color: $grey;
 			margin: 20px auto 60px;
 			@include breakpoint(mobile-landscape){
+				text-align: center;
 				margin: 20px auto 40px;
+			}
+			@include breakpoint(mobile){
+				margin-bottom: 60px;
 			}
 		}
 		.project{
@@ -28,9 +40,6 @@
 				img{
 					width: 100%;
 					margin: 0 0 20px;
-					@include breakpoint(mobile-landscape){
-						margin: 0;
-					}
 				}
 				.overbox{
 					width: 100%;
