--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -3,26 +3,46 @@
 	#details{
 		background: $background;
 		#profile{
-			background-size: cover !important;
-			background-position: bottom center !important;
-			background-repeat: no-repeat !important;
-			width: 180px;
-			height: 180px;
-			border-radius: 50%;
+			width: 25%;
+			height: auto;
+			text-align: center;
 			float: left;
 			position: relative;
 			transition: all 300ms ease-in-out;
-			margin: 0 20px 0 0;
-			top: 0;
 			@include breakpoint(tablet){
 				width: 100%;
-				height: 300px;
+				height: 320px;
 				margin: 20px 0;
 				border-radius: 0;
 			}
 			@include breakpoint(mobile-landscape){
 				height: 180px;
 				margin: 0 0 20px 0;
+			}
+			.img{
+				background-size: cover !important;
+				background-position: top center !important;
+				background-repeat: none !important;
+				display: inline-block;
+				width: 180px;
+				height: 180px;
+				border-radius: 50%;
+				margin: 40px auto;
+				transition: all 300ms ease-in-out;
+				@include breakpoint(tablet){
+					background-position: bottom center !important;
+					width: 100%;
+					border-radius: 0;
+					height: 320px;
+					margin: 0;
+				}
+				@include breakpoint(mobile-landscape){
+					background-position: bottom center !important;
+					width: 100%;
+					border-radius: 0;
+					height: 180px;
+					margin: 0;
+				}
 			}
 		}
 		h1,h4{
@@ -47,22 +67,30 @@
 			}
 		}
 		#text-wrap{
-			width: 100%;
+			width: 75%;
 			float: left;
 			margin: 40px 0;
 			@include breakpoint(mobile-landscape){
+				width: 100%;
 				margin: 20px 0;
 			}
 		}
 		.four{
-			width: 25%;
+			width: 33.333%;
 			float: left;
 			min-height: 200px;
 			transition: all 300ms ease-in-out;
-			@include breakpoint(tablet){
-				width: 50%;
+			li{
+				margin-bottom: 20px;
+				border-bottom: 1px solid $green-bg;
+				@include breakpoint(tablet){
+					border-bottom: none;
+				}
+				&:last-child{
+					border-bottom: none;
+				}
 			}
-			@include breakpoint(mobile-landscape){
+			@include breakpoint(tablet){
 				width: 100%;
 				min-height: 0;
 			}
