--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,7 +13,7 @@ h1{
 		margin-top: 20px;
 	}
 }
-p, ul li{
+p, ul li, ol li{
 	color: $black;
 	font-family: 'quattrocento_romanregular','Times New Roman',Serif;
 	transition: all 300ms ease-in-out;
