--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -32,7 +32,7 @@
 				width: 220px;
 				height: 60px;
 				margin: 20px 0;
-				color: $green;
+				color: transparent;
 				font-size: 2em;
 				font-family: 'latoregular',Helvetica,Arial,sans-serif;
 				text-align: center;
@@ -55,4 +55,7 @@
 #nav-wrap.open{
 	z-index: 10;
 	background: $background;
+	nav ul li a{
+		color: $green;
+	}
 }
